// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Splash should  render  dark theme 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBarblocks__NavWrapper-sc-nciu2a-0 cxmxRW"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="flex items-center justify-center my-auto mr-4 pl-0.5 text-white rounded-xl w-11 h-11 bg-theme-success-600"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 fYoPaw flex flex-col flex-1 justify-center text-center select-none"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-center mx-auto max-w-md"
          >
            <svg>
              welcome-banner-dark-green.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              Payvo Wallet
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="flex justify-center mt-4"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-secondary-800)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex fixed right-0 left-0 bottom-5 justify-center items-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div
              class="Splash__LogoContainer-sc-1f3o2v4-0 hjuMZp"
            >
              <svg
                height="12"
              >
                payvo-logo.svg
              </svg>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              Version 1.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Splash should  render  light theme 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBarblocks__NavWrapper-sc-nciu2a-0 cxmxRW"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="flex items-center justify-center my-auto mr-4 pl-0.5 text-white rounded-xl w-11 h-11 bg-theme-success-600"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 fYoPaw flex flex-col flex-1 justify-center text-center select-none"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-center mx-auto max-w-md"
          >
            <svg>
              welcome-banner-light-green.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              Payvo Wallet
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="flex justify-center mt-4"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-success-200)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex fixed right-0 left-0 bottom-5 justify-center items-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div
              class="Splash__LogoContainer-sc-1f3o2v4-0 hjuMZp"
            >
              <svg
                height="12"
              >
                payvo-logo.svg
              </svg>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              Version 1.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Splash should render without year 1`] = `
<DocumentFragment>
  <div
    class="flex relative flex-col min-h-screen"
  >
    <nav
      aria-labelledby="main menu"
      class="NavigationBarblocks__NavWrapper-sc-nciu2a-0 cxmxRW"
    >
      <div
        class="flex relative h-21"
      >
        <div
          class="flex flex-1 px-8 ml-12"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="flex items-center justify-center my-auto mr-4 pl-0.5 text-white rounded-xl w-11 h-11 bg-theme-success-600"
            >
              <svg
                height="28"
              >
                payvo-logo.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-col flex-1"
    >
      <div
        class="Section__SectionWrapper-sc-plnv9l-0 fYoPaw flex flex-col flex-1 justify-center text-center select-none"
      >
        <div
          class="container px-10 mx-auto"
        >
          <div
            class="flex justify-center mx-auto max-w-md"
          >
            <svg>
              welcome-banner-dark-green.svg
            </svg>
          </div>
          <div
            class="mt-8"
            data-testid="Splash__text"
          >
            <h1
              class="text-4xl font-extrabold"
            >
              Payvo Wallet
            </h1>
            <p
              class="animate-pulse text-theme-secondary-text"
            >
              Initializing...
            </p>
            <div
              class="flex justify-center mt-4"
            >
              <div
                class="animate-spin"
              >
                <svg
                  height="40"
                  viewBox="0 0 40 40"
                  width="40"
                >
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-secondary-800)"
                    stroke-width="2"
                  />
                  <circle
                    cx="20"
                    cy="20"
                    fill="transparent"
                    r="19"
                    stroke="var(--theme-color-primary-600)"
                    stroke-dasharray="119.38052083641213"
                    stroke-dashoffset="95.50441666912971"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    transform="rotate(-90 20 20)"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex fixed right-0 left-0 bottom-5 justify-center items-center text-xs font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="Splash__footer"
          >
            <div>
              2020 © ARK.io
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              All Rights Reserved
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div
              class="Splash__LogoContainer-sc-1f3o2v4-0 hjuMZp"
            >
              <svg
                height="12"
              >
                payvo-logo.svg
              </svg>
            </div>
            <div>
              An ARK.io Product
            </div>
            <div
              class="Divider-sc-17ehhxk-0 jqFYpY border-theme-secondary-300 dark:border-theme-secondary-800"
              type="vertical"
            />
            <div>
              Version 1.0.0
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
